Add additional information about the conventions a POJO must follow

--- a/_posts/2000-01-05-usage.md
+++ b/_posts/2000-01-05-usage.md
@@ -28,6 +28,8 @@ JsonDBTemplate jsonDBTemplate = new JsonDBTemplate(dbFilesLocation, baseScanPack
 
 **Defining a POJO**
 
+Every object that you wish to save in JsonDB must be a POJO (Plain Old Java Object) that satisfies the JavaBean programming conventions. Each object must implement either Serializable or Externalizable, must have a no-arg(default) constructor, and each of its properties(attributes) must have public setter and getter methods. The names of these methods must be as per the JavaBean naming conventions.
+
 Note the package in the POJO its the same as the 2nd argument we passed while instantiating the `JsonDBTemplate` object.
 Also note the 3 annotations in the POJO:
 
