Update download and usage page
Added details of the two new versions released each for Java8 and Java11
Replaced the deprecated DefaultAESCBCCipher usage with Default1Cipher
Added details of using sorting and slicing

--- a/_posts/2000-01-03-download.md
+++ b/_posts/2000-01-03-download.md
@@ -11,6 +11,7 @@ Stable Jsondb builds are uploaded to [Maven Central](http://search.maven.org/#se
 
 - You can download the **jar**, **source-jar** or **javadoc-jar** from Maven Central and use it in the traditional way by adding it into your classpath. Jsondb uses quite a few of other opensource java libraries so doing it this way will involve getting all those libraries and adding to your classpath.
 - Optionally (Recommended) if you use Maven, Gradle or any such build system you can get it as a dependency using the appropriate dependency code.
+- Since March 2019 two different builds are released, Each version is suffixed with -j8 or -j11. First one is built using Jdk version 1.8(LTS) and second one is built using Jdk version 11(LTS). This is to facilitate users who are still on Java 8.
 
 **Example:**
 {% highlight html %}
