--- a/_posts/2000-01-05-usage.md
+++ b/_posts/2000-01-05-usage.md
@@ -21,7 +21,7 @@ String dbFilesLocation = "<path on disk to save or read .json files from>";
 String baseScanPackage = "com.mypackage.model";
 
 //Optionally a Cipher object if you need Encryption
-ICipher cipher = new DefaultAESCBCCipher("1r8+24pibarAWgS85/Heeg==");
+ICipher cipher = new Default1Cipher("1r8+24pibarAWgS85/Heeg==");
 
 JsonDBTemplate jsonDBTemplate = new JsonDBTemplate(dbFilesLocation, baseScanPackage, cipher);
 {% endhighlight %}
@@ -166,11 +166,33 @@ List<Instance> retInstances = jsonDBTemplate.findAllAndModify(jxQuery, update, "
 
 -------------------------
 
+## Sorting and Slicing in Jsondb
+
+**Sorting**
+Jsondb allows you to obtain a sorted result with the find() and findAll() methods.
+{% highlight java %}
+Comparator<Instance> comparator = new Comparator<Instance>() {
+  @Override
+  public int compare(Instance o1, Instance o2) {
+    return (o1.getSomeAttribute().compareTo(o2.getSomeAttribute()));
+  }
+};
+List<Instance> instances = jsonDBTemplate.findAll(Instance.class, comparator);
+{% endhighlight %}
+
+**Slicing**
+Jsondb slicing feature is similar to the python/numpy slicing feature. Slice string parameter is expected in format i:j:k and should following all the rules similar to the slicing feature in python/numpy. Slicing can be used in combination with sorting or without sorting
+{% highlight java %}
+List<Instance> instances = jsonDBTemplate.findAll(Instance.class, null, "0:7:2");
+{% endhighlight %}
+
+-------------------------
+
 ## Encryption support in Jsondb
 
 - If you do not need encryption support simply use a `JsonDBTemplate` constructor that does not require a cipher argument or pass null. Make sure you are not using the `@Secret` annotation in any of your POJO's.
 
-- However If you do need encryption support then as in the examples above instantiate a instance of `io.jsondb.crypto.DefaultAESCBCCipher` class and pass that when instantiating `JsonDBTemplate`.
+- However If you do need encryption support then as in the examples above instantiate a instance of `io.jsondb.crypto.Default1Cipher` class and pass that when instantiating `JsonDBTemplate`.
 
 - If you need help creating a secure `Symmetric Key` for the above default cipher use the following standalone.
 {% highlight java %}
@@ -183,6 +205,6 @@ String base64EncodedKey = CryptoUtil.generate128BitKey("SomeSecretPassword", "So
 
 - At some later time if you need to change the `cipher` and/or the `key` used then use the below api. Make sure you back up the database files in case something goes wrong.
 {% highlight java %}
-ICipher newCipher = new DefaultAESCBCCipher("SomeNewKey");
+ICipher newCipher = new Default1Cipher("SomeNewKey");
 jsonDBTemplate.changeEncryption(newCipher);
 {% endhighlight %}
